crates/edm-core/tests/snapshots/render__commodity_narrow_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== COMMODITIES  3 entries in 2 categories ==========================================================
+-----------+---------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
|        ID | Commodity     | Stock | Stk |   Buy |  Sell | Fence | Demand | Dmd |  Mean | CPRI |
+===========+===============+=======+=====+=======+=======+=======+========+=====+=======+======+
| CHEMICALS  2 items | 1 supplied | 1 in demand                                                 |
+-----------+---------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| 128049202 | Explosives    | 1,204 | ##. |   312 |   296 |     - |      - | ... |   301 | ..R. |
| 128049203 | Hydrogen Fuel |     - | ... |   110 |   104 |     - |  3,412 | #.. |   107 | .P.. |
+-----------+---------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| METALS  1 items | 0 supplied | 1 in demand                                                    |
+-----------+---------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| 128049152 | Gold          |     - | ... | 9,428 | 9,301 |     - |    812 | #.. | 9,401 | C..I |
+-----------+---------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
