crates/edm-core/tests/snapshots/render__commodity_narrow_w60.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== COMMODITIES  3 entries in 2 categories ==================
+---------------+-------+-------+-------+--------+------+
| Commodity     | Stock |   Buy |  Sell | Demand | CPRI |
+===============+=======+=======+=======+========+======+
| CHEMICALS  2 items | 1 supplied | 1 in demand         |
+---------------+-------+-------+-------+--------+------+
| Explosives    | 1,204 |   312 |   296 |      - | ..R. |
| Hydrogen Fuel |     - |   110 |   104 |  3,412 | .P.. |
+---------------+-------+-------+-------+--------+------+
| METALS  1 items | 0 supplied | 1 in demand            |
+---------------+-------+-------+-------+--------+------+
| Gold          |     - | 9,428 | 9,301 |    812 | C..I |
+---------------+-------+-------+-------+--------+------+
   columns hidden to fit 60 cols: ID, Fence, Mean, Stk, Dmd
