crates/edm-core/tests/snapshots/render__commodity_unicode_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== COMMODITIES  3 entries in 1 categories ==========================================================
+-----------+------------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
|        ID | Commodity        | Stock | Stk |   Buy |  Sell | Fence | Demand | Dmd |  Mean | CPRI |
+===========+==================+=======+=====+=======+=======+=======+========+=====+=======+======+
| SALVAGE — RECOVERED  3 items | 1 supplied | 0 in demand                                          |
+-----------+------------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| 128666754 | Grüne Ölproben ~ |    12 | #.. | 1,204 | 1,180 |     - |      - | ... | 1,190 | ..RI |
| 128666755 | 東京ステーション記念品セット   |     - | ... |   412 |   400 |     - |     18 | #.. |   406 | C... |
| 128666756 | 🚀🛰️🪐 Deep Sp~ |     - | ... | 9,001 | 8,900 |     - |      - | ... | 8,950 | ..R. |
+-----------+------------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
